# elf-dissector

./: .flatpak-manifest.json  .flatpak-manifest.json.license  .gitignore  .kde-ci.yml  .krazy  CMakeLists.txt  COPYING  README.md  add_license.sh  config-elf-dissector-version.h.cmake  config-elf-dissector.h.cmake  elffile.cpp  elffile.h  elfsection.cpp  elfsectionheader.cpp  elfsectionheader.h  elfsymboltablesection.cpp  main.cpp
cli/: CMakeLists.txt  deadcode.cpp  depcheck.cpp  main.cpp  optimizer.cpp  packcheck.cpp  rtticheck.cpp
dwarf/: dwarfdie.cpp  (+6 more)
src/cli/: CMakeLists.txt  deadcode.cpp  depcheck.cpp  optimizer.cpp  packcheck.cpp  rtticheck.cpp
src/lib/: CMakeLists.txt
src/lib/checks/: CMakeLists.txt  deadcodefinder.cpp  deadcodefinder.h  dependenciescheck.cpp  dependenciescheck.h  ldbenchmark-runner.c  ldbenchmark.cpp  ldbenchmark.h  structurepackingcheck.cpp  structurepackingcheck.h  virtualdtorcheck.cpp  virtualdtorcheck.h
src/lib/demangle/: demangler.cpp  demangler.h
src/lib/disassmbler/: disassembler.cpp  disassembler.h
src/lib/dwarf/: dwarfaddressranges.cpp  dwarfaddressranges.h  dwarfcudie.cpp  dwarfcudie.h  dwarfdie.cpp  dwarfdie.h  dwarfexpression.cpp  dwarfexpression.h  dwarfinfo.cpp  dwarfinfo.h  dwarfleb128.cpp  dwarfleb128.h  dwarfline.cpp  dwarfline.h  dwarfranges.cpp  dwarfranges.h  dwarftypes.h
src/lib/elf/: elfarraysection.h  elfdynamicentry.cpp  elfdynamicentry.h  elfdynamicentry_impl.h  elfdynamicsection.cpp  elfdynamicsection.h  elfdynamicsection_impl.h  elffile.cpp  elffile.h  elffileset.cpp  elffileset.h  elfgnudebuglinksection.cpp  elfgnudebuglinksection.h  elfgnuhashsection.cpp  elfgnuhashsection.h  elfgnusymbolversiondefinition.cpp  elfgnusymbolversiondefinition.h  elfgnusymbolversiondefinitionauxiliaryentry.cpp  elfgnusymbolversiondefinitionauxiliaryentry.h  elfgnusymbolversiondefinitionssection.cpp  elfgnusymbolversiondefinitionssection.h  elfgnusymbolversionrequirement.cpp  elfgnusymbolversionrequirement.h  elfgnusymbolversionrequirementauxiliaryentry.cpp  elfgnusymbolversionrequirementauxiliaryentry.h  elfgnusymbolversionrequirementssection.cpp  elfgnusymbolversionrequirementssection.h  elfgnusymbolversiontable.cpp  elfgnusymbolversiontable.h  elfgotentry.cpp  elfgotentry.h  elfgotsection.cpp  elfgotsection.h  elfhashsection.cpp  elfhashsection.h  elfheader.cpp  elfheader.h  elfnoteentry.cpp  elfnoteentry.h  elfnoteentry_impl.h  (+28 more)
src/lib/optimizers/: dependencysorter.cpp  dependencysorter.h
src/lib/printers/: dwarfprinter.cpp  dwarfprinter.h  dynamicsectionprinter.cpp  dynamicsectionprinter.h  elfprinter.cpp  elfprinter.h  gnuversionprinter.cpp  gnuversionprinter.h  notesectionprinter.cpp  notesectionprinter.h  printerutils_p.h  relocationprinter.cpp  relocationprinter.h  symbolprinter.cpp  symbolprinter.h
src/ui/: CMakeLists.txt  colorizer.cpp  colorizer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.license  org.kde.elf-dissector.appdata.xml  org.kde.elf-dissector.desktop
src/ui/dependencymodel/: dependencymodel.cpp  dependencymodel.h  filelistmodel.cpp  filelistmodel.h  fileusermodel.cpp  fileusermodel.h  unuseddependenciesmodel.cpp  unuseddependenciesmodel.h  usedsymbolmodel.cpp  usedsymbolmodel.h
src/ui/elfmodel/: datavisitor.cpp  datavisitor.h  elfmodel.cpp  elfmodel.h  elfnodevariant.h  elfnodevisitor.h  indexvisitor.cpp  indexvisitor.h  parentvisitor.cpp  parentvisitor.h  rowcountvisitor.cpp  rowcountvisitor.h  sectionproxymodel.cpp  sectionproxymodel.h
src/ui/issuesmodel/: issuesmodel.cpp  issuesmodel.h
src/ui/loadbenchmarkmodel/: loadbenchmarkmodel.cpp  loadbenchmarkmodel.h
src/ui/navigator/: codenavigator.cpp  codenavigator.h  (+2 more)
tests/: CMakeLists.txt  demangle-ast.cpp  demangler_test.cpp  elffilesettest.cpp  single-executable.cpp  structures.cpp
tests/auto/: CMakeLists.txt  demangler_test.cpp  dependencymodeltest.cpp  dwarfdietest.cpp  dwarfexpressiontest.cpp  dwarfleb128test.cpp  elffilesettest.cpp  elffiletest.cpp  elfgnusymbolversioningtest.cpp  elfhashtest.cpp  elfmodeltest.cpp  elfnotesectiontest.cpp  elfsymboltabletest.cpp  typemodeltest.cpp
tests/targets/: CMakeLists.txt  qtstructures.cpp  single-executable.c  single-executable.cpp  structures.cpp  versioned-symbols.c  versioned-symbols.version  virtual-inheritance.cpp  virtual-methods.cpp
tests/tools/: CMakeLists.txt  demangle-ast.cpp
ui/: CMakeLists.txt  colorizer.cpp  colorizer.h  elf-dissector.desktop  elfmodel.cpp  elfmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  org.kde.elf-dissector.appdata.xml  org.kde.elf-dissector.desktop
ui/dependencymodel/: dependencymodel.cpp  dependencymodel.h  filelistmodel.cpp  filelistmodel.h  fileusermodel.cpp  fileusermodel.h  unuseddependenciesmodel.cpp  unuseddependenciesmodel.h  usedsymbolmodel.cpp  usedsymbolmodel.h
ui/elfmodel/: datavisitor.cpp  datavisitor.h  elfmodel.cpp  elfmodel.h  elfnodevariant.h  elfnodevisitor.h  indexvisitor.cpp  indexvisitor.h  parentvisitor.cpp  parentvisitor.h  rowcountvisitor.cpp  rowcountvisitor.h  sectionproxymodel.cpp  sectionproxymodel.h
ui/issuesmodel/: issuesmodel.cpp  issuesmodel.h
ui/loadbenchmarkmodel/: loadbenchmarkmodel.cpp  loadbenchmarkmodel.h
ui/model/: datavisitor.cpp  datavisitor.h  elfmodel.cpp  elfmodel.h  elfnodevariant.h  elfnodevisitor.h  indexvisitor.cpp  indexvisitor.h  parentvisitor.cpp  parentvisitor.h  rowcountvisitor.cpp  rowcountvisitor.h  sectionproxymodel.cpp  sectionproxymodel.h
ui/navigator/: codenavigator.cpp  codenavigator.h  codenavigatorprinter.cpp  codenavigatorprinter.h
ui/plotter/: gnuplotter.cpp  gnuplotter.h  ldbenchmark.gnuplot
ui/typemodel/: typemodel.cpp  typemodel.h
ui/views/: dependencyview.cpp  dependencyview.h  dependencyview.ui  elfstructureview.cpp  elfstructureview.h  elfstructureview.ui  issuesview.cpp  issuesview.h  issuesview.ui  loadbenchmarkview.cpp  loadbenchmarkview.h  loadbenchmarkview.ui  sizetreemapview.cpp  sizetreemapview.h  sizetreemapview.ui  typeview.cpp  typeview.h  typeview.ui
ui/widgets/: gnuplotwidget.cpp  gnuplotwidget.h  sidepane.cpp  sidepane.h
(+249 files in other folders)
